<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="getPincodeVM"
            type="com.apion.apionhome.viewmodel.UserViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_Get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#478C51"
            android:paddingBottom="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >
            <ImageView
                android:id="@+id/imageBackForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginStart="23dp"
                android:src="@drawable/ic_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/txtTitleGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:text="@string/title_get_getcode"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
            android:id="@+id/edtNewPincode"
            style="@style/StyleEditTextRegister"
            android:hint="@string/hint_new_pincode"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/dp_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_Get"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/edtConfirmPincode"
            style="@style/StyleEditTextRegister"
            android:hint="@string/hint_confirm_pincode"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNewPincode"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button
            android:id="@+id/btnChangePincode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/dp_70"
            android:background="@drawable/background_button1"
            android:text="@string/button_sent_pincode"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
